--- a/condicionaisListas/app-listas1.html
+++ b/condicionaisListas/app-listas1.html
@@ -5,29 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
 </head>
 <body>
     <div id="app">
-        <p v-once>{{ titulo }}</p>
-        <p>{{ saudacao() }}</p>
-        <a :href="link">Google</a>
+        <ul>
+            <li v-for="cor in cores" >{{ cor }}</li>
+        </ul>
     </div>
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
     var app = new Vue({
-    el: '#app',
-    data: {
-        titulo   : 'Usando VueJS!',
-        link     : 'https://google.com.br' 
-    },
-    methods: {
-        saudacao:function(){
-            this.titulo = "olá mundo";
-            return this.titulo
+        el: '#app',
+        data:{
+            cores: ['vermelho', 'verde', 'amarelo', 'azul'],
+            pessoas: [
+                { nome: 'Ana', idade: 26, peso: 59},
+                { nome: 'Edilson', idade: 21, peso: 89}
+            ]
         }
-    },
     })
 </script>
 </html>
