--- a/condicionaisListas/app-listas2.html
+++ b/condicionaisListas/app-listas2.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        ul {
+            list-style: none;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
-        <p>{{ titulo }}</p>
-        <!-- v-bind:value = atualiza camada visaul /  v-on:input = atualiza backend-->
-        <!-- <input v-bind:value="titulo" type="text" v-on:input= "titulo = $event.target.value"> -->
-        <!-- v-model = faz a dua alteração -->
-        <input type="text" v-model="titulo">
+        <ul>
+            <li v-for="(cor, index) in cores" :key="index">{{ cor }} -  {{ index }}</li>
+        </ul>
     </div>
     
 </body>
@@ -20,8 +23,12 @@
 <script>
     var app = new Vue({
         el: '#app',
-        data: {
-            titulo: 'Usando VueJS!'
+        data:{
+            cores: ['vermelho', 'verde', 'amarelo', 'azul'],
+            pessoas: [
+                { nome: 'Ana', idade: 26, peso: 59},
+                { nome: 'Edilson', idade: 21, peso: 89}
+            ]
         }
     })
 </script>
